[gd_scene load_steps=4 format=3 uid="uid://b007n4yqr0fh5"]

[ext_resource type="Script" uid="uid://dh1kob7ln83iq" path="res://Resources/UI/TutorialUI.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_objective"]
bg_color = Color(0.15, 0.15, 0.2, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.5, 0.8, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hint"]
bg_color = Color(0.2, 0.2, 0.15, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0.8, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="TutorialUI" type="CanvasLayer"]
layer = 99
script = ExtResource("1")

[node name="ObjectivePanel" type="PanelContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 100.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_objective")

[node name="MarginContainer" type="MarginContainer" parent="ObjectivePanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="ObjectivePanel/MarginContainer"]
layout_mode = 2

[node name="ObjectiveLabel" type="Label" parent="ObjectivePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 16
text = "Objective: Complete the tutorial"
autowrap_mode = 3

[node name="HintPanel" type="PanelContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 80.0
offset_right = 250.0
offset_bottom = 140.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hint")

[node name="MarginContainer" type="MarginContainer" parent="HintPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 12

[node name="HintLabel" type="Label" parent="HintPanel/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.95, 0.7, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.6)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 18
text = "ðŸ’¡ Hint: Press WASD to move"
horizontal_alignment = 1
autowrap_mode = 3
